add config tsoa and swagger
